--- a/oes-core/src/main/resources/templates/teacher/paper/save-paper-form.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/save-paper-form.html
@@ -9,7 +9,7 @@
     include("../../include/css.html"){}
     %>
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
     <!-- 引入头部 -->
     <%include("../../teacher/include/header.html"){} %>
