--- a/oes-core/src/main/resources/templates/teacher/paper/save-paper.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/save-paper.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/static/plugins/datetimepicker/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="/webjars/adminlte/2.3.11/plugins/datepicker/datepicker3.css">
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 
 <div class="wrapper">
     <!-- 顶部导航栏部分 -->
