--- a/oes-core/src/main/resources/templates/teacher/paper/api/paper-form-list-api.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/api/paper-form-list-api.html
@@ -1,18 +1,15 @@
 <script>
-    // 操作试卷模板
-    $(function () {
-        $(".rowDel").click(function () {
-            const id = $(this).attr("rel");
-            layer.confirm("确定删除该模版么?", function () {
-                $.get("/api/paperForm/delete/" + id).done(function (data) {
-                    if (data.state === "success") {
-                        layer.msg("删除成功!");
-                        window.location.href = "/teacher/paperForm";
-                    } else {
-                        layer.msg(data.message);
-                    }
-                })
-            });
-        });
-    });
+
+    // 删除卷模板
+    function deletePaperForm(id) {
+        OesUtil.confirm("确定删除该模版么?", function () {
+            $.get("/api/paperForm/delete/" + id).done(function (data) {
+                if (data.state === "success") {
+                    window.location.href = "/teacher/paperForm";
+                } else {
+                    toastr.error(data.message);
+                }
+            })
+        })
+    }
 </script>
