--- a/oes-core/src/main/resources/templates/teacher/paper/paper-form-list.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/paper-form-list.html
@@ -28,83 +28,102 @@
         text-align: center;
     }
 </style>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
     <!-- 引入头部 -->
     <% include("../../teacher/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <% include("../../teacher/include/sider.html"){} %>
+    <% layout("../../teacher/include/sider.html",{name:"paper"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">模版列表</h3>
-                    <div class="box-tools">
-                        <a href="/teacher/paper" class="btn btn-primary btn-sm"><i
-                                class="fa fa-arrow-left"></i> 返回列表</a>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>模版列表</h1>
+                    </div>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="/teacher/paper">试卷列表</a></li>
+                        </ol>
                     </div>
                 </div>
-                <div class="box-body no-padding">
-                    <table class="table table-hover table-bordered">
-                        <thead>
-                        <tr>
-                            <th></th>
-                            <th>题型</th>
-                            <th>数量</th>
-                            <th>分数</th>
-                            <th>题型</th>
-                            <th>数量</th>
-                            <th>分数</th>
-                            <th>题型</th>
-                            <th>数量</th>
-                            <th>分数</th>
-                            <th>题型</th>
-                            <th>数量</th>
-                            <th>分数</th>
-                            <th>题型</th>
-                            <th>数量</th>
-                            <th>分数</th>
-                            <th>题型</th>
-                            <th>数量</th>
-                            <th>分数</th>
-                            <th>操作</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <% for( form in formList ){ %>
-                        <tr>
-                            <th scope="row">模版 ${formLP.index}</th>
-                            <td>单选题</td>
-                            <td> ${form.QChoiceNum}</td>
-                            <td> ${form.QChoiceScore}</td>
-                            <td>多选题</td>
-                            <td> ${form.QMulChoiceNum}</td>
-                            <td> ${form.QMulChoiceScore}</td>
-                            <td>判断题</td>
-                            <td> ${form.QTofNum}</td>
-                            <td> ${form.QTofScore}</td>
-                            <td>填空题</td>
-                            <td> ${form.QFillNum}</td>
-                            <td> ${form.QFillScore}</td>
-                            <td>简答题</td>
-                            <td> ${form.QSaqNum}</td>
-                            <td> ${form.QSaqScore}</td>
-                            <td>编程题</td>
-                            <td> ${form.QProgramNum}</td>
-                            <td> ${form.QProgramScore}</td>
-                            <td>
-                                <a class="btn btn-sm btn-vk" href="/teacher/paper/save/${form.id}">使用</a>
-                                <a class="rowDel btn btn-sm btn-danger"
-                                   rel="${form.id}">删除
-                                </a>
-                            </td>
-                        </tr>
-                        <% } %>
-                        </tbody>
-                    </table>
-                </div>
             </div>
+        </section>
+
+        <!-- table 部分 -->
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">试卷列表</h3>
+                            </div>
+                            <!-- /.card-header -->
+                            <div class="card-body table-responsive p-0">
+                                <table class="table table-hover table-bordered">
+                                    <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>题型</th>
+                                        <th>数量</th>
+                                        <th>分数</th>
+                                        <th>题型</th>
+                                        <th>数量</th>
+                                        <th>分数</th>
+                                        <th>题型</th>
+                                        <th>数量</th>
+                                        <th>分数</th>
+                                        <th>题型</th>
+                                        <th>数量</th>
+                                        <th>分数</th>
+                                        <th>题型</th>
+                                        <th>数量</th>
+                                        <th>分数</th>
+                                        <th>题型</th>
+                                        <th>数量</th>
+                                        <th>分数</th>
+                                        <th>操作</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <% for( form in formList ){ %>
+                                    <tr>
+                                        <th scope="row">模版 ${formLP.index}</th>
+                                        <td>单选题</td>
+                                        <td> ${form.QChoiceNum}</td>
+                                        <td> ${form.QChoiceScore}</td>
+                                        <td>多选题</td>
+                                        <td> ${form.QMulChoiceNum}</td>
+                                        <td> ${form.QMulChoiceScore}</td>
+                                        <td>判断题</td>
+                                        <td> ${form.QTofNum}</td>
+                                        <td> ${form.QTofScore}</td>
+                                        <td>填空题</td>
+                                        <td> ${form.QFillNum}</td>
+                                        <td> ${form.QFillScore}</td>
+                                        <td>简答题</td>
+                                        <td> ${form.QSaqNum}</td>
+                                        <td> ${form.QSaqScore}</td>
+                                        <td>编程题</td>
+                                        <td> ${form.QProgramNum}</td>
+                                        <td> ${form.QProgramScore}</td>
+                                        <td>
+                                            <a class="btn btn-sm btn-success" href="/teacher/paper/save/${form.id}">使用</a>
+                                            <a class="rowDel btn btn-sm btn-danger" onclick="deletePaperForm(${form.id})">删除</a>
+                                        </td>
+                                    </tr>
+                                    <% } %>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                </div>
+            </div><!-- /.row -->
         </section>
     </div>
     <!-- 引入footer -->
@@ -113,6 +132,8 @@
 <% include("../../include/js.html"){} %>
 <!-- 接口 -->
 <%include("api/paper-form-list-api.html"){}%>
+<!-- 自定义工具 -->
+<script src="/static/js/OesUtil.js"></script>
 </body>
 </html>
 
