--- a/oes-core/src/main/resources/templates/teacher/paper/update-answer-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/update-answer-modal.html
@@ -1,28 +1,26 @@
 <!-- 修改答案模态框 -->
-<div class="modal fade editAns">
+<div class="modal fade" id="updateAnswerModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">修改答案</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">修改答案</h4>
             </div>
             <div class="modal-body">
                <form id="update-answer-form">
-                   <div class="form-group form_datetime">
-                       <label for="modalAns">ID</label>
-                       <input type="text" readonly="readonly" name="id" class="form-control"
-                              id="modalAnsId">
-                       <label for="modalAns">答案</label>
-                       <input type="text" name="answer" class="form-control"
-                              id="modalAns">
+                   <div class="form-group">
+                       <input type="text" readonly="readonly" name="id" class="form-control" placeholder="题目编号" id="update-answer-id">
+                   </div>
+                   <div class="form-group">
+                       <input type="text" name="answer" class="form-control" id="update-answer-answer" placeholder="题目答案">
                    </div>
                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary subEditAns">确定</button>
+                <button type="button" class="btn btn-primary" id="updateAnswerBtn">确定</button>
             </div>
         </div>
     </div>
