--- a/oes-core/src/main/resources/templates/teacher/paper/update-question-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/update-question-modal.html
@@ -1,247 +1,27 @@
-<div class="modal fade editQueAll">
+<div class="modal fade" id="updateQuestionIdModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
+                <h4 class="modal-title">修改题目</h4>
                 <button type="button" class="close" data-dismiss="modal"><span
                         aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">修改题目</h4>
             </div>
             <div class="modal-body">
                     <div class="form-group form_datetime">
                         <form id="update-question-form">
                         <input type="hidden" readonly="readonly" name="paperId" value="${paper.id}">
-                        <label for="modalQueOldId">原题目 ID</label>
-                        <input type="text" readonly="readonly" name="oldId" class="form-control"
-                               id="modalQueOldId">
-                        <label for="modalQueNewId">新题目 ID</label>
-                        <input type="text" name="newId" class="form-control"
-                               id="modalQueNewId">
+                        <label for="oldQuestionId">原题目 ID</label>
+                        <input type="text" readonly="readonly" name="oldId" class="form-control" id="oldQuestionId">
+                        <label for="newQuestionId">新题目 ID</label>
+                        <input type="text" name="newId" class="form-control" id="newQuestionId">
                         </form>
                     </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary subEditQueExist">确定</button>
+                <button type="button" class="btn btn-primary" id="updateQuestionIdBtn">确定</button>
             </div>
         </div>
-    </div>
-</div>
-<div class="box">
-    <div class="box-header with-border">
-        <h3 class="box-title">试卷详情</h3>
-    </div>
-    <div class="box-body">
-        <form id="paper" method="post">
-            <ul class="list-group">
-                <!--单选题-->
-                <% if(isNotEmpty(qChoiceList)){ %>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">单选题</h4>
-                    </div>
-                    <div class="panel-body">
-                        <% for( choice in qChoiceList ){ %>
-                        ${choiceLP.index }. ${choice.questionName}
-                        <div class="box-tools pull-right" rel="${choice.id}">
-                            <a class="btn btn-success btn-sm openEditChoiceAnsBtn"
-                               rel="${choice.answer}">修改答案</a>
-                            <a id="editQue" class="btn btn-success btn-sm editExistBtn"
-                               rel="${choice.answer}">修改题目（从题库中找）</a>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                A. <span style="display: inline-block;">${choice.optionA}</span>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                B. <span style="display: inline-block;">${choice.optionB}</span>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                C. <span style="display: inline-block;">${choice.optionC}</span>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                D. <span style="display: inline-block;">${choice.optionD}</span>
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label>答案</label>
-                            <input type="text" readonly="readonly" value="${choice.answer}"
-                                   class="form-control choiceAns">
-                        </div>
-                        <hr>
-                        <br>
-                        <% } %>
-                    </div>
-                </div>
-                <% } %>
-                <!--多选题-->
-                <% if(isNotEmpty(qMulChoiceList)){ %>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">多选题 <small>(不选、错选、漏选均不得分)</small></h4>
-                    </div>
-                    <div class="panel-body">
-                        <% for( qMulChoice in qMulChoiceList ){ %>
-                        ${qMulChoiceLP.index}. ${qMulChoice.questionName}
-                        <div class="box-tools pull-right" rel="${qMulChoice.id}">
-                            <a class="btn btn-success btn-sm openEditChoiceAnsBtn"
-                               rel="${qMulChoice.answer}">修改答案</a>
-                            <a class="btn btn-success btn-sm editExistBtn"
-                               rel="${qMulChoice.answer}">修改题目（从题库中找）</a>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                A. <span style="display: inline-block;">${qMulChoice.optionA}</span>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                B. <span style="display: inline-block;">${qMulChoice.optionB}</span>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                C. <span style="display: inline-block;">${qMulChoice.optionC}</span>
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                D. <span style="display: inline-block;">${qMulChoice.optionD}</span>
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label>答案</label>
-                            <input type="text" readonly="readonly" value="${qMulChoice.answer}"
-                                   class="form-control">
-                        </div>
-                        <hr/>
-                        <% } %>
-                    </div>
-                </div>
-                <% } %>
-                <!--判断题-->
-                <% if(isNotEmpty(qTofList)){ %>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">判断题</h4>
-                    </div>
-                    <div class="panel-body">
-                        <% for( question in qTofList ){ %>
-                        ${questionLP.index}.
-                        <span class="ansName">${question.questionName}</span>
-                        <div class="box-tools pull-right" rel="${question.id}">
-                            <a class="btn btn-success btn-sm openEditChoiceAnsBtn"
-                               rel="${question.answer}">修改答案</a>
-                            <a class="btn btn-success btn-sm editExistBtn"
-                               rel="${question.answer}">修改题目（从题库中找）</a>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                A. 对<span style="display: inline-block;"></span>
-                            </label>
-                        </div>
-                        <div class="radio">
-                            <label>
-                                B. 错<span style="display: inline-block;"></span>
-                            </label>
-                        </div>
-                        <div class="form-group">
-                            <label>答案</label>
-                            <input type="text" readonly="readonly" value="${question.answer}"
-                                   class="form-control">
-                        </div>
-                        <hr/>
-                        <% } %>
-                    </div>
-                </div>
-                <% } %>
-                <!--填空题-->
-                <% if(isNotEmpty(qFillList)){ %>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">填空题</h4>
-                    </div>
-                    <div class="panel-body">
-                        <% for( question in qFillList){ %>
-                        ${questionLP.index}.
-                        <span class="ansName">${question.questionName}</span>
-                        <div class="box-tools pull-right" rel="${question.id}">
-                            <a class="btn btn-success btn-sm openEditChoiceAnsBtn"
-                               rel="${question.answer}">修改答案</a>
-                            <a class="btn btn-success btn-sm editExistBtn"
-                               rel="${question.answer}">修改题目（从题库中找）</a>
-                        </div>
-                        <div class="form-group">
-                            <label>答案</label>
-                            <input type="text" value="${question.answer}" readonly="readonly"
-                                   name="${question.id}" class="form-control">
-                        </div>
-                        <% } %>
-                    </div>
-                </div>
-                <% } %>
-                <!--简答题-->
-                <% if(isNotEmpty(qSaqList)){ %>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">简答题</h4>
-                    </div>
-                    <div class="panel-body">
-                        <% for( question in qSaqList ){ %>
-                        ${questionLP.index}.
-                        <span class="ansName">${question.questionName}</span>
-                        <div class="box-tools pull-right" rel="${question.id}">
-                            <a class="btn btn-success btn-sm openEditChoiceAnsBtn"
-                               rel="${question.answer}">修改答案</a>
-                            <a class="btn btn-success btn-sm editExistBtn"
-                               rel="${question.answer}">修改题目（从题库中找）</a>
-                        </div>
-                        <div class="form-group">
-                            <label>答案</label>
-                            <textarea rows="5" type="text" readonly="readonly"
-                                      name="${question.id}"
-                                      class="form-control">${question.answer}</textarea>
-                        </div>
-                        <div class="form-group">
-                        </div>
-                        <hr/>
-                        <% } %>
-                    </div>
-                </div>
-                <% } %>
-                <!--编程题-->
-                <% if(isNotEmpty(qProgramList)){ %>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">编程题</h4>
-                    </div>
-                    <div class="panel-body">
-                        <% for( question in qProgramList ){ %>
-                        ${questionLP.index}.
-                        <span class="ansName">${question.questionName}</span>
-                        <div class="box-tools pull-right" rel="${question.id}">
-                            <a class="btn btn-success btn-sm openEditChoiceAnsBtn"
-                               rel="${question.answer}">修改答案</a>
-                            <a class="btn btn-success btn-sm editExistBtn"
-                               rel="${question.answer}">修改题目（从题库中找）</a>
-                        </div>
-                        <div class="form-group">
-                            <label>答案</label>
-                            <input type="text" readonly="readonly" value="${question.answer}"
-                                   name="${question.id}" class="form-control">
-                        </div>
-                        <hr/>
-                        <% } %>
-                    </div>
-                </div>
-                <% } %>
-            </ul>
-        </form>
     </div>
 </div>
